Bug 149029 - UI: Scroll to the select object in the Animation panel on selecting
Summary: UI: Scroll to the select object in the Animation panel on selecting
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks: Sidebar-Animation
  Show dependency treegraph
 
Reported: 2022-05-11 07:46 UTC by Telesto
Modified: 2022-05-11 18:54 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (318.88 KB, application/vnd.oasis.opendocument.presentation)
2022-05-11 07:46 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-05-11 07:46:44 UTC
Description:
UI: Scroll to the select object in the Animation panel on selecting

Steps to Reproduce:
1. Open the attached file
2. Set sidebar to the animation deck
3. Select the encircled Bézier curve

Actual Results:
The Bézier curve is invisible in the animation deck

Expected Results:
I inclined to scroll to that position to make the 'selection' visible (it's blue highlighted)


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: cdf8e971d5d46df4bcab35a99c4254df9459213f
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-GB
Calc: CL Jumbo
Comment 1 Telesto 2022-05-11 07:46:58 UTC
Created attachment 180054 [details]
Example file
Comment 2 Heiko Tietze 2022-05-11 08:10:55 UTC
Yes, we scroll to the Effect but not the actual animation object in case of a long list.

Maybe easyhackable in sd/source/ui/animations/SlideTransitionPane.cxx
Comment 3 Commit Notification 2022-05-11 18:42:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/528008104bcb7433f818ab3e8bf10bf1296e09b9

tdf#149029 Scroll to the selected object in the Animation panel on selecting

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2022-05-11 18:54:57 UTC
done in trunk