tdf#149029 Scroll to the selected object in the Animation panel on selecting

Change-Id: I2c14f9c6df74d4534c936b392f0e066dabebea9e